--- a/app/templates/repository/repositories.twig
+++ b/app/templates/repository/repositories.twig
@@ -10,7 +10,7 @@
             <tr>
                 <th>Repository</th>
                 <th>Github Source</th>
-                <th>Notification E-mail</th>
+                <th>Notification Email</th>
                 <th></th>
             </tr>
         </thead>
