--- a/app/templates/repository/deployments.twig
+++ b/app/templates/repository/deployments.twig
@@ -1,9 +1,9 @@
 {% extends 'base.html.twig' %}
 
-{% set page_title = repository.key~' deployments' %}
+{% set page_title = repository.description ~ ' deployments' %}
 
 {% block content %}
-    <h2><b>{{ repository.key }}</b> Deployment Relationships</h2>
+    <h2>Deployment Relationships for <b>{{ repository.description }}</b> </h2>
 
     <p>Deployment relationships define what servers your application can be deployed to and where on that server the code will be placed.</p>
     <p>Paths must be absolute and begin with a forward slash (/).</p>
