--- a/app/templates/repository/repositories.twig
+++ b/app/templates/repository/repositories.twig
@@ -26,7 +26,7 @@
 
                 {% for repo in group.getRepositories %}
                     <tr>
-                        <td><a href="{{ urlFor('repository.status', {'id': repo.id}) }}">{{ repo.key }}</a></td>
+                        <td><a href="{{ urlFor('repository.status', {'id': repo.id}) }}">{{ repo.description }}</a></td>
                         <td>
                             <a href="{{ githubRepo(repo.githubUser, repo.githubRepo) }}">{{ repo.githubUser }}/{{ repo.githubRepo }}</a>
                             <svg class="icon" viewBox="0 0 32 32"><use xlink:href="#github"></use></svg>
