--- a/app/templates/server/admin.edit.twig
+++ b/app/templates/server/admin.edit.twig
@@ -3,7 +3,7 @@
 {% set page_title = 'Edit Server: '~server.name %}
 
 {% block content %}
-    <h2>Edit <strong>{{ server.name }}</strong> server</h2>
+    <h2>Edit Server</h2>
 
     <div class="form-wrapper">
         {% if errors %}
