--- a/sass/style.scss
+++ b/sass/style.scss
@@ -42,6 +42,7 @@
 // Example: use @import "partials/nav" if you are adding style to the nav object.
 ///
 @import "partials/utilities/mixins";
+@import "partials/utilities/misc";
 @import "partials/spacing";
 @import "partials/grid";
 @import "partials/global";
